feat: server replication

--- a/default.project.json
+++ b/default.project.json
@@ -4,9 +4,9 @@
 		"$className": "DataModel",
 		"ReplicatedStorage": {
 			"$className": "ReplicatedStorage",
-			"packages": {
+			"Packages": {
 				"$className": "Folder",
-				"$path": "packages"
+				"$path": "Packages"
 			},
 			"shared": {
 				"$className": "Folder",
