--- a/aftman.toml
+++ b/aftman.toml
@@ -4,4 +4,5 @@
 # To add a new tool, add an entry to this table.
 [tools]
 rojo = "rojo-rbx/rojo@7.4.4"
-# rojo = "rojo-rbx/rojo@6.2.0"
+wally = "UpliftGames/wally@0.3.2"
+wally-package-types = "JohnnyMorganz/wally-package-types@1.3.2"
